# wsf

./: .gitignore  Cargo.toml  Makefile  README.adoc  README.md  build.rs  wsf.1  wsf.1.md
.devcontainer/: Dockerfile  devcontainer.json
ferries/: README.md  client.go
src/: lib.rs  main.rs
