[package]
name = "wsf"
version = "1.1.10"
authors = ["Brian McCallister <brianm@skife.org>"]
license = "Apache-2.0"
edition = "2018"
documentation = "https://github.com/brianm/wsf"

[dependencies]
chrono = "0.4.19"
dirs = "4.0.0"
docopt = "1.1.1"
env_logger = "0.9.0"
human-panic = "1.0.3"
lazy_static = "1.4.0"
log = "0.4.16"
regex = "1.5.5"
reqwest = { version = "0.11.10", features = ["json"] }
tokio = { version = "1.17.0", features = ["full"] }
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
anyhow = "1.0.57"
thiserror = "1.0.30"

[dev-dependencies]
mockito = "0.31.0"
pretty_assertions = "1.2.1"

[profile.release]
lto = true
