[package]
name = "wsf"
version = "1.1.10"
authors = ["Brian McCallister <brianm@skife.org>"]
license = "Apache-2.0"
edition = "2018"
documentation = "https://github.com/brianm/wsf"

[dependencies]
chrono = "0.4.31"
dirs = "5.0.1"
docopt = "1.1.1"
env_logger = "0.10.1"
human-panic = "1.0.3"
lazy_static = "1.4.0"
log = "0.4.20"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1.34.0", features = ["full"] }
serde = "1.0.192"
serde_derive = "1.0.192"
serde_json = "1.0.108"
anyhow = "1.0.75"
thiserror = "1.0.50"

[dev-dependencies]
mockito = "1.2.0"
pretty_assertions = "1.4.0"

[profile.release]
lto = true
