[package]
name = "wsf"
version = "1.1.10"
authors = ["Brian McCallister <brianm@skife.org>"]
license = "Apache-2.0"
edition = "2021"
documentation = "https://github.com/brianm/wsf"

[dependencies]
chrono = "0.4"
dirs = "5"
docopt = "1"
env_logger = "0.10"
human-panic = "1"
lazy_static = "1"
log = "0.4.20"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
anyhow = "1"
thiserror = "1"

[dev-dependencies]
mockito = "1.2.0"
pretty_assertions = "1.4.0"

[profile.release]
lto = true
